# manage-agenda

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  clientes.md  delete_post_id_reference.md  gmail_quickstart.py  issue_2_reference.md  pyproject.toml
.github/workflows/: test.yml
compare_html/: compare.py  compare_directory.py  kk.html
compare_html/cache/: blog.computationalcomplexity.org  diis.unizar.es_es_noticias
compare_html/ex1/: lectura-de-tesis-de-sergio-izquierdo  profesores-del-diis-en-las-ii-jornadas-aragon-la-autonomia-en-la-era-digital  resultado.html
compare_html/ex2/: resultado.html  vernoticia_ng.php?id=93343  vernoticia_ng.php?id=93350
compare_html/ex3/: conferencias-divulgativas-ano-internacional-de-la-fisica-cuantica-2025  resultado.html  visitas-guiadas-gratuitas-la-exposicion-teatro-y-pintura-aragon-y-el-ducado-de
compare_html/ex4/: exposicion-de-proyectos-presentados-al-concurso-internacional-de-pintura-mural-manuscrito  incendios-forestales-un-problema-territorial-un-enfoque-sistemico  resultado.html
manage_agenda/: .cli.py.swp  __init__.py  __main__.py  cli.py  config.py  exceptions.py  moduleImap.py  utils.py  utils_base.py  utils_llm.py  utils_web.py  validators.py
manage_agenda/prompts/: event_extraction_prompt.txt
tests/: conftest.py  test.txt  test_cli.py  test_config.py  test_extractor.py  test_main.py  test_manage_agenda.py  test_process_web_cli.py  test_utils.py  test_utils_base.py  test_utils_llm.py  test_utils_web.py  test_validators.py
