[project]
name = "manage-agenda"
version = "0.1"
description = "Adding entries to google calendar"
readme = "README.md"
authors = [{name = "Fernando Tricas García"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = []
dependencies = [
    "click",
    "google-api-python-client",
    "google.generativeai",
    "mistralai",
    "ollama",
    "setuptools",
    "social-modules @ git+https://github.com/fernand0/socialModules.git",
    "beautifulsoup4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["manage_agenda"] #, "manage_agenda.utils"]

[project.urls]
Homepage = "https://github.com/fernand0/manage-agenda"
Changelog = "https://github.com/fernand0/manage-agenda/releases"
Issues = "https://github.com/fernand0/manage-agenda/issues"
CI = "https://github.com/fernand0/manage-agenda/actions"

[project.scripts]
manage-agenda = "manage_agenda.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[tool.uv]
dev-dependencies = ["pytest"]
